Se justificó el texto de los detalles de medición

--- a/frontend/protegido.html
+++ b/frontend/protegido.html
@@ -122,7 +122,7 @@
 
       /* Opcional: centrar el contenido principal */
       .protected-container {
-        text-align: center;
+        text-align: justify; /* Alinea el texto de forma justificada */
       }
     </style>
   </head>
